--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pretest": "cross-env MODE=test npm run build",
     "test": "node tests/app.spec.js",
     "watch": "node scripts/watch.js",
+    "in-chrome": "cd packages/renderer && vite",
     "lint": "eslint . --ext js,ts,vue",
     "pretypecheck": "npm run buildEnvTypes",
     "typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@types/electron-devtools-installer": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.1",
     "@vitejs/plugin-vue": "^1.2.4",
     "cross-env": "^7.0.3",
     "electron": "^13.1.4",
@@ -49,8 +51,10 @@
     "vue-tsc": "^0.2.0"
   },
   "dependencies": {
+    "@vue/compiler-sfc": "^3.1.3",
     "electron-updater": "^4.3.10",
-    "vue": "^3.1.2",
+    "element-plus": "^1.0.2-beta.53",
+    "vue": "^3.1.3",
     "vue-router": "^4.0.10"
   }
 }
